# notes

./: PythonDecoded.drawio  PythonDecodedMap.drawio  README.md  requirements.txt
calculator_package/: README.md  pyproject.toml  setup.py
calculator_package/calculator/: __main__.py  calc.py
concurency_practice/: process_example.py  subroutine_example.py  thread_example.py
curses_snake/: main.py  snake_curses.py  snake_poc.py
descriptors/: cached_property_example.py  file_content_descriptor.py  full_interface_descrptor.py  orm_example.py  property_example.py  simple_descriptor.py  validator_descriptor.py
dto/: attrs_example.py  cerberus_example.py  csv_example.py  dataclass_example.py  dataclass_json_example.py  marshmallow_dataclass_example.py  named_tuple_example.py  pydantic_example.py  simple_class_example.py  typed_dict_example.py  userdict_example.py
error_bingo/: indentation_error.py  prepare_error_table.py  syntax_error.py  tab_error.py  test_errors.py
flet_intro/: README.md  pyproject.toml
flet_intro/src/: main.py
frameworks/: calculator_framework.py  fastapi_app.py  flask_app.py  postman_collection.json  sanic_app.py
heic_converter_app/: README.md  heic_converter.py  requirements.txt
jinja_example/: main.py
locust_example/: README.md  main.py
ollama_hands_on/: ollama_api.py  ollama_requests.py
parse_email/: parse_email_example.py  render_email_tree.py
pydantic_examples/: fields_config.py  model_config.py
random_example/: random_example.py
sql_alchemy_example/: declarative_example.py  imperative_example.py  quickstart.py
(+126 files in other folders)
