[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator_framework-python_decoded"
version = "0.0.2"
authors = [
  { name="Python Decoded", email="author@example.com" },
]

description = "A simple arithmetic package"
readme = "README.md"
license = {file = "LICENSE"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.8"
dependencies = [
    "mypy",
    "tzdata; sys_platform == 'win32'"
]


[project.optional-dependencies]
extra = ["pytest", "flake8"]


[project.urls]
Homepage = "https://github.com/calculator_framework"
